# mcp-weather-plus

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mcp_weather_plus/: __main__.py  server.py  utils.py
src/mcp_weather_plus/services/: air_quality.py  time.py  weather.py
src/mcp_weather_plus/tools/: air_quality.py  time.py  toolhandler.py  weather.py
src/weather_mcp/: __main__.py  exceptions.py  models.py  server.py
src/weather_mcp/services/: air_quality.py  time.py  weather.py
src/weather_mcp/tools/: air_quality.py  time.py  weather.py
tests/: conftest.py
tests/e2e/: test_mcp_flow.py
tests/unit/: test_air_quality.py  test_time.py  test_weather.py
