[project]
name = "mcp-weather-plus"
version = "0.1.0"
description = "Weather MCP Server"
readme = "README.md"
authors = [
    { name = "atomlong", email = "atom.long@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "pydantic>=2.12.5",
    "pytz>=2025.2",
    "starlette>=0.50.0",
    "tzdata>=2025.3",
    "uvicorn>=0.39.0",
]

[project.scripts]
mcp-weather-plus = "mcp_weather_plus:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
